--- a/IEEE_Alvaro_old.tex
+++ b/IEEE_Alvaro_old.tex
@@ -59,9 +59,9 @@ These are operated by Thales UK in collaboration with other partners.\\
 Here, we investigate novel methods for generating profiles that do not require segmentation or an underlying model, and that can be computed by only using statistical and spectral analysis of previous data.
 
 \section{Data}
-The NTIS employs a directed network model to represent the major roads in England; wherever a road encounters a diversion, a node is placed on the network and an edge is placed following the motorway.
+The UK National Traffic Information System (NTIS) employs a directed network model to represent the major roads in England; wherever a road encounters a diversion, a node is placed on the network and an edge is placed following the motorway. 
 The basic building blocks of the system are the so-called links. 
-They are segments of these edges, with a length varying between 500 and over 6000 meters, representing carriageways in the edges between nodes connected by a road. 
+They are segments of these edges, with a length varying between 500 and 2500 meters, representing of carriageways in the edges between nodes connected by a road. 
 The links on the network incorporate thousands of induction loops (sensors) at different sites, which report speed, flow and other data to a centralised system.\\
 
 NTIS data is being used to assign a traffic profile to each link on the network. 
@@ -71,82 +71,64 @@ These profiles use analysis of previous travel times within the same section of 
 Operating modern Smart Motorways in the UK revolves around the use of these traffic profiles, operators rely on them to identify deviations, take corrective actions and display accurate information on the overhead signs. 
 Better profiles means more accuracy for the whole system.\\
 
-Currently, generating these profiles makes use of a combination of an Exponentially Weighted Moving Average (EWMA) and heavy time-dependent segmentation, although the exact methodology is not Public. 
+Currently, generating these profiles makes use of a combination of an Exponentially Weighted Moving Average (EWMA) and heavy time-dependent segmentation. 
 
 
 \subsection{Data Selection}
 \begin{itemize}
-	\item Link-level data was extracted for sections of the M6, M11 and M25 motorways in England.
+	\item Link-level data was extracted for the sections of M6, M11 and M25 shown in Figure \ref{fig:map}
 	\item The dataset for M6 and M11 comprises 90 days of data (07/03/2016-05/06/2016).
 	\item The dataset for M25 comprises 75 days of data (07/04/2017-20/06/2017).
 	\item Links with more than 10\% of missing data were discarded.
-	\item Whenever missing data was detected for 10 or less minutes, it was linearly interpolated.
-	\item Whenever missing data was detected for over 10 minutes, it was left as missing values.
 \end{itemize}
 The first two motorways were selected due to their combination of recurrent and outstanding congestion. 
 The M25 was selected on the base that it is the most used Motorway in England on a daily basis, suffering from chronic congestion.
 \subsection{Data Contents}
-For each link on a specific date, the data consists of one entry per minute, containing:
+For each link on a specific date, the data consists of one entry per minute, containing, amongst others, the following:
 \begin{itemize}
-	\item Traffic speed
-	\item Traffic flow
-	\item Traffic headway.
-	\item Current travel time
-	\item Profile travel time 
-	\item Free flow travel time
-	\item Event flags for:
-	\begin{itemize}
-		\item Spontaneous congestion events
-		\item Weather events 
-		\item Other unspecified types of events.
-	\end{itemize} 	
+	\item Average values of traffic speed, traffic flow and traffic headway.
+	\item Average values of current travel time, profile travel time and free flow travel time.
+	\item Event flags for spontaneous congestion events, weather events and other types of events.	
 \end{itemize}
 
-\subsection{Training and Testing Data}
-In the case of the M6 and M11, the data comprises 12 whole weeks of travel time. The previous 8 weeks are used to predict the following 4. 
-However, in an attempt to more closely simulate real operation, it was assumed that new measurements were received at the end of every week, allowing for an updated prediction using the new measurements in addition to the last 7 of the original 8, effectively working on a rolling basis.\\
-In the case of the M25, the dataset comprised 9 complete weeks. 
-Hence, 6 weeks of data were used to predict the following 3 in the same manner as described in the previous paragraph.
 
 \section{Examples of travel times} 
 The most direct variable for measuring the state of traffic over a length of road is the vehicles' travel times. 
-The travel time for a given segment of road is the average time that the vehicles currently in it are taking since they enter the segment until they exit it.\\
+The travel time for a given segment of road as the average time that the vehicles currently in it are taking since they enter the segment until they exit it.\\
 
-As we can see in Figure \ref{fig:travel_time_example} the travel time remains within a vaguely predictable pattern most of the days with bounded minima corresponding to the free flow time, there are some outliers below this value corresponding to speeding drivers. 
+As we can see in Figure \ref{fig:travel_time_example} the travel time remains within a vaguely predictable pattern most of the days. 
 We will find very low highway travel times during the nights, mostly being equal to the free flow time, it will meaningfully rise as people leave to work and the add load to the motorways. 
-This collective behaviour will create the morning traffic jams. 
-As the morning rush passes, the travel times settle to a plateau that lasts until late afternoon when we can see the evening rush, which potentially, albeit less likely, can also create jams. 
-After this, the travel times slowly decay until we are again in the night free-flow regime.\\
+This collective behaviour will create the morning traffic jams. As the morning rush passes, the travel times settle to a plateau that lasts until late afternoon when we can see the evening rush, which potentially, albeit less likely, can also create jams. 
+After this, the travel times slowly decay until we are again in the night free-flow regime.
 
 \begin{figure}[htbp]
 	\centerline{\includegraphics[width=\linewidth]{./images/Traveltime_example.png}}
-	\caption{Travel times on link 117007401 in the M6 over three weeks.}
+	\caption{Example of travel times on a link in the M6 over a period of three weeks.}
 	\label{fig:travel_time_example}
 \end{figure}
 
 However, as it also follows from Figure \ref{fig:travel_time_example}, we can see that there are a series of excursions out of this otherwise oscillating yet bounded typical travel time. 
-In these occasions the travel time can increase several times fold the usual values.
- 
-\section{Current Traffic Profiles}
+In these occasions the travel time can increase several times fold the usual values. 
+\section{Current Traffic Profiles?}
 One of the main current approaches for highway operators is to generate profiles for each section of road. 
 These profiles indicate what travel times can be expected in a given time and place.
 
 \subsection{Use of Exponentially Weighted Moving Average} \label{ewma}
 One currently used way for creating these Traffic Profiles consists in applying an Exponentially Weighted Moving Average (EWMA) on the same minute of every day, with the implicit assumption that we can expect similar road behaviour at the same time of the day. 
 Whatever changes happen for a given time, are smooth enough so their trend will be appropriately approximated by the EWMA.
-In these algorithms we find that the Travel time forecast $F(i,d)$ on the $i-th$ minute of a given day $d$, with measured travel time $t$, will be:
+In these algorithms we find that the travel time forecast $F(i,d)$ on the $i-th$ minute of a given day $d$ will be:
 \begin{equation}
-F^{d+1}_i = \alpha * t^{d}_{i} + (1-\alpha)*F^{d}_{i}
+F^{d}_i = \alpha * t^{d-1}_{i} + (1-\alpha)*F^{d-1}_{i}
 \end{equation}
 The main problem with using an EWMA is the manner in which the memory decays. 
-Since more recent measurements are weighted more heavily than events in the past, if an extreme fluctuation occurs in the form of a traffic jam, the following forecasts will be biased, partially replicating this event and over-estimating the travel times in that section of road until enough new measurements have been taken to dissipate this effect.
+Since more recent measurements are weighted more heavily than events in the past, if an extreme fluctuation occurs, the following forecasts will be biased, partially replicating this event and over-estimating the travel times in that section of road until enough new measurements have been taken to dissipate this effect.
 
 \subsection{Segmentation}\label{segmentation}
-In addition, to acknowledge the specific differences between some special dates in the year, and the difference between days of the week, this family of methods require the use of heavy date based segmentation. 
-This segmentation means that the EWMA will be applied across dates which fall in the same category (i.e. Mondays, weekends, Christmas Day, ...).
-If we combine this with the shortcomings presented in \ref{ewma}, we find that some long reaching effects are generated, which can propagate for weeks into the future predictions, but do not have any reflection on the observed travel times, as it can be observed in Figure \ref{fig:EWMA_spike}.
-Furthermore, in order to generate this segmentation in a valid manner, an experienced team is necessary, since the needs for segmentation can geographically vary, given that the EWMA approach tends to better approximate endemic congestion. 
-This dependence on experienced teams can lead to the creation of legacy systems which may not be well understood after a few years, decreasing their usability over time unless extra effort is put into transmitting this knowledge and continually training new staff.
+In addition, to acknowledge the specific differences between some special dates in the year, and the difference between days of the week, this family of methods require the use of heavy date segmentation. 
+This segmentation means that the EWMA will be applied across dates which fall in the same category (i.e. Mondays, weekends, Christmas Day, ...)
+If we combine this with the shortcomings presented in \ref{ewma}, we find that some long reaching effects are generated, which can propagate for weeks into the future predictions, but do not have any reflection on the observed travel times, as it can be observed in Figure \ref{fig:EWMA_spike}. 
+Furthermore, in order to generate this segmentation in a valid manner, an experienced team is necessary, since the needs for segmentation can geographically vary. 
+This dependence on experienced teams can lead to the creation of legacy systems which may not be well understood, decreasing their usability over time unless extra effort is put into transmitting this knowledge and continually training new staff.
 \begin{figure}
 	\includegraphics[width=\linewidth]{EWMA.pdf}
 	\caption{Example of the current algorithm predicting increases in travel times for several weeks after a peak is seen in the measured travel times (25/04/2016)}
@@ -155,7 +137,8 @@ This dependence on experienced teams can lead to the creation of legacy systems 
 
 
 \section{Algorithm} \label{algorithm}
-Given the cyclic nature of traffic, we aimed for a prediction algorithm that could account for the periodic variations and endemic congestion while being resilient to fluctuations and rare events. This algorithm also should:
+Given the cyclic nature of traffic, we aimed for a prediction algorithm that could account for the periodic variations while being resilient to fluctuations. 
+This algorithm also should:
 \begin{itemize}
 	\item Mitigate the propagation of isolated events into future forecasts.
 	\item Not require the use of time segmentation (experience) and be valid for regular and "special dates".
@@ -164,16 +147,16 @@ Given the cyclic nature of traffic, we aimed for a prediction algorithm that cou
 	\item Near flat Trend term, given the different time scales between seasonal cycles and changes in the general motorway flow.
 \end{itemize}
 
-\subsection{Naive Segmentation}
-To obtain an accurate indication of the performance of the algorithm developed in the following subsections, an example of basic segmentation was coded. 
+\subsection{Null Model: Naive Segmentation}
+To obtain an accurate indication of the performance of the algorithm developed in the previous subsections, an example of basic segmentation was coded. 
 This involved a weighted combination of the training data points using uniform weights. 
-In this way, for the $i-th$ minute of a week and using a training set composed of the previous of $n$ weeks, the Naive Segmentation (NS) profile is:
+In this way, for the $i-th$ minute of the week and using a training set composed of the previous of $n$ weeks, the Null profile is:
 \begin{equation}
-NS(i,n) = \sum_{\textrm{week}=1}^{n} \frac{x^i_n}{n} 
+Null(i,n) = \sum_{\textrm{week}=1}^{n} \frac{x^i_n}{n} 
 \end{equation}
 
 \subsection{Decomposition in Background and Spikes}
-During the exploratory data analysis it was found that, from the point of view of travel times, traffic operates in two clearly differentiated regimes. 
+During the exploratory data analysis we found that, from the point of view of travel times, traffic operates in two clearly differentiated regimes. 
 \begin{itemize}
 	\item Background: 
 	\begin{itemize}
@@ -189,39 +172,23 @@ During the exploratory data analysis it was found that, from the point of view o
 	\end{itemize}
 \end{itemize}
 
-\begin{figure}[htbp]
-	\centering
-	\includegraphics[width=0.95\linewidth]{new_flow.png}
-	\caption{Schematic of data streams in the algorithm.}
-	\label{fig:flowchart}
-\end{figure}
 
-In order to stop the large deviations from affecting the underlying true profile, it was decided to separate these spikes from the rest and treat them in a separate manner. 
-Assuming Gaussian noise $\xi$:
+In order to stop the large deviations from affecting the underlying true profile, it was decided to separate these spikes from the rest and treat them in a separate manner.
 \begin{equation}
-Travel \textrm{ } Time_t = Background_t + Spikes_t + \xi
+x_t = Background_t + Spikes_t + \xi
 \end{equation}
-The objective is to separate them in such a way that most of the recurring congestion is captured as part of the Background and used for spectral analysis, trying to mitigate the prediction error induced by the high frequency oscillations and obtaining a basic view of what can be daily observed.
+The objective is to separate them in such a way that the recurring congestion is captured as part of the Background and used for spectral analysis, trying to mitigate the prediction error induced by the high frequency oscillations and obtaining a basic view of what can be daily observed. 
 Meanwhile, the spikes, including the recurring component not captured in the background and the non-recurring congestion, are treated separately in an attempt to find seasonality in larger time scales than those in which the background oscillates. 
-Ideally, after this step, an operator should only find isolated large rare events deviating from the profile and white noise.\\
+Ideally, after this step, an operator should only find isolated large events deviating from the profile and white noise.\\
 
-To prevent the differing lengths of the links from affecting this decomposition, all travel times were normalized according to their corresponding link's free flow time, understood as the time to transverse the length of the link at the maximum legal speed allowed by the motorway. 
-However, this step only mitigates the non-regularity of the time series, since there are drivers who do not follow these limits.\\
+To prevent the differing lengths of the links from affecting this decomposition, all travel times were normalized according to their corresponding link's free flow time, understood as the time to transverse the length of the link at the maximum speed allowed by the motorway.\\
 
-A threshold was heuristically chosen to separate the two components in the different regimes from the normalised travel times. 
-Intuitively, this threshold scales with the amount of recurring congestion in a link. 
-Whenever a data point is above the threshold, it is flagged as belonging to a spike.
-
-\begin{figure}[htbp]
-	\centering
-	\includegraphics[width=0.95\linewidth]{BS.pdf}
-	\caption{ Decomposition of time series in background and spikes }
-	\label{fig:Background}
-\end{figure}
-
-For this purpose, we define an indicator function, taking for every minute the value:\\
+A threshold was heuristically chosen to separate the two components in the different regimes.
+ Intuitively, this threshold scales with the amount of recurring congestion in a link. 
+ Whenever a data point is above the threshold, it is flagged as belonging to a spike.
+For this purpose, we define an indicator function:\\
 \begin{equation}
-\delta_t^{spike}= \left\{
+\delta_{spike}= \left\{
 \begin{array}{lr}
 1 & : \textrm{Over threshold}\\
 0 & : \,\,\,\,\,\,\,\,\,\,\,\,\textrm{Otherwise}
@@ -229,6 +196,7 @@ For this purpose, we define an indicator function, taking for every minute the v
 \right.
 \label{eq:delta}
 \end{equation}
+
 
 \begin{table}[htbp]
 	\caption{Normalised Travel Time Thresholds}
@@ -248,9 +216,20 @@ For this purpose, we define an indicator function, taking for every minute the v
 	\end{center}
 \end{table}
 
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=0.95\linewidth]{BS.pdf}
+	\caption{ Decomposition of time series in background and spikes }
+	\label{fig:Background}
+\end{figure}
+
+
+
 \subsection{Spectral Component}
 The main difficulty when dealing with the Background time series is the low amplitude, high frequency fluctuations that can be found almost ubiquitously. 
-In these situations signal smoothing can be easily performed by removing completely the frequency components from a certain frequency and up while the information bearing low frequency components are retained. For this task, the Fast Fourier Transform (FFT) \cite{FFT} was used.
+In these situations signal smoothing can be easily performed with removing completely the frequency components from a certain frequency and up while the information bearing low frequency components are retained. 
+For this tast, the Fast Fourier Transform (FFT) \cite{FFT} was used.
 
 Below, the sequence of steps taken to process the Background part of the measured travel times is described
 \begin{enumerate}
@@ -263,7 +242,7 @@ Below, the sequence of steps taken to process the Background part of the measure
 
 \end{enumerate}
 \subsection{Seasonality Component}
-Seasonal-Trend Decomposition based on LOESS (STL) \cite{STL} was chosen for the seasonality analysis since "STL has several advantages over the classical decomposition method and X-12-ARIMA: Unlike X-12-ARIMA, STL will handle any type of seasonality, not only monthly and quarterly data. 
+Seasonal Decomposition based on LOESS (STL) \cite{STL} was chosen for the seasonality analysis since "STL has several advantages over the classical decomposition method and X-12-ARIMA: Unlike X-12-ARIMA, STL will handle any type of seasonality, not only monthly and quarterly data. 
 The seasonal component is allowed to change over time, and the rate of change can be controlled by the user. 
 The smoothness of the trend-cycle can also be controlled by the user. It can be robust to outliers (i.e., the user can specify a robust decomposition). 
 So occasional unusual observations will not affect the estimates of the trend-cycle and seasonal components" \cite{forecasting}.\\
@@ -272,21 +251,21 @@ Below, the sequence of steps taken to process the Seasonality Component part of 
 Note that this should be applied to the $n$ training weeks as a single time series.
 \begin{enumerate}
 	\item STL Decomposition of Background for daily seasonality
-	\item Extract and sum the series corresponding Trend and Remainder from Step 1
+	\item Extract and sum the series corresponding Trend and Remainder from 1)
 	\item STL decomposition for weekly seasonality
-	\item Comprobation of Background's Remainder and Trend from Step 3
+	\item Comprobation of Background's Remainder and Trend from 3)
 	\begin{enumerate}
 		\item Background's Remainder should be zero mean, Gaussian distributed
 		\item Background's Trend should have a near zero slope
 	\end{enumerate}
-	\item Add daily and weekly Seasonal components from Step 1 and Step 3 to obtain global seasonality
+	\item Add daily and weekly Seasonal components from 1) and 3)
 	\item Average seasonality across training weeks
 	\item Linearise Trend term from
 	\begin{enumerate}
 		\item Select extreme values in the series and create a linear interpolation between them
 		\item Extract the trend corresponding to the number of weeks for forecasting
 	\end{enumerate}
-	\item Add linearised trend to seasonality obtained in Step 6
+	\item Add linearised trend to seasonality obtained in 6)
 	\item STL Decomposition of Spikes for weekly seasonality
 	\item Comprobation of Spike's remainder and trend
 	\begin{enumerate}
@@ -296,23 +275,30 @@ Note that this should be applied to the $n$ training weeks as a single time seri
 	\item Extract Spike's Seasonality corresponding to the number of weeks for forecasting
 	\item Add Spike's Seasonal component to the output of 8) to output from 9)
 \end{enumerate}
-\subsection{Seasonal-Spectral Hybrid Profile}
-In order to create the final Seasonal-Spectral Hybrid profile, referred to as Hybrid in the following sections, we take one of the forecasts generated in the previous points depending on what is the identified regime, as described in 
+\subsection{Profile Generation}
+In order to create the final hybrid profile, we take one of the forecasts generated in the previous points depending on what is the identified regime, as described in 
 
 \begin{equation}
 Hybrid = Seasonal * \delta_{spike} + Spectral * (1 - \delta_{spike})
 \end{equation}
-Where $\delta_{spike}$ is the indicator function defined in Equation \eqref{eq:delta}.
+Where $\delta_{spike}$ is the indicator function defined in Equation \ref{ref:delta}.
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=0.95\linewidth]{new_flow.png}
+	\caption{Schematic of data streams in the algorithm.}
+	\label{fig:flowchart}
+\end{figure}
+
 
 \section{Accuracy Results}
-In this section the accuracy of the algorithm described above is compared against the Published Profiles and the NS Model. 
-For each temporal point $i$, the error is quantified as the average normalised distance between the prediction and the measured travel times across all analysed links.
+In this section the accuracy of the algorithm described above is compared against the Published Profiles and the Null Model. 
+The error is quantified as the average distance between the prediction and the measured travel times across all analysed links.
 \begin{equation}
-\textrm{Error} = \left( \sum_{\textrm{Link}=1}^{n} \frac{\|\textrm{Measurement}_i - \textrm{Prediction}_i\|}{\textrm{Measurement}_i}\right) /n 
+\textrm{Error} = \left( \sum_{\textrm{Link}=1}^{n} \frac{\|\textrm{Measurement} - \textrm{Prediction}\|}{\textrm{Measurement}}\right) /n 
 \end{equation}
 \subsection{Accuracy by Quantile}
 In this subsection, the accuracy of the algorithm is compared against the Published Profiles and the Null Profile across all percentiles of travel time.
-As it can be seen in Figures \ref{fig:m6q}, \ref{fig:m11q} and \ref{fig:m25q}, the profile generated by combining the Seasonal and Spectral analysis has a higher accuracy than the Published Profiles and the Null Model for all percentiles of travel time except for the most extreme values where they all perform poorly.\\
+As it can be seen in Figures \ref{fig:m6q}, \ref{fig:m11q} and \ref{fig:m25q}, the profile generated by combining the Seasonal and Spectral analysis has a higher accuracy than the Published Profiles and the Null Model for all percentiles of travel time except for the most extreme values where they all perform poorly. 
 The most relevant difference occurs between percentiles $[60-95]$, where the Published Profile starts to suffer from higher inaccuracy, due to some extreme events in the shorter links. 
 In all cases, the Hybrid model is the one that requires greater travel times to reach a $20\%$ error in the prediction.
 \begin{figure}[htbp]
@@ -337,8 +323,8 @@ In all cases, the Hybrid model is the one that requires greater travel times to 
 
 \subsection{Daytime Error}
 In this subsection, the accuracy of the algorithm is compared against the Published Profiles and the Null Profile across the times of the day.
-As it can be seen in Figures \ref{fig:m6daytime}, \ref{fig:m11daytime} and \ref{fig:m25daytime}, the Hybrid Profile generated by combining the Seasonal and Spectral analysis has a higher accuracy than the Published Profiles and the Null Model for all times of the day, all locations and training lengths. 
-The most relevant improvement occurs during the morning and evening peak hours, where the algorithm presented in this paper does not accuse meaningful performance worsening relative to the morning plateau when compared with the other two profiles.\\
+As it can be seen in Figures \ref{fig:m6daytime}, \ref{fig:m11daytime} and \ref{fig:m25daytime}, the profile generated by combining the Seasonal and Spectral analysis has a higher accuracy than the Published Profiles and the Null Model for all times of the day. 
+The most relevant improvement occurs during the morning and evening peak hours, where the algorithm presented in this paper does not accuse meaningful performance worsening relative to the morning plateau when compared with the other two profiles. 
 In the case of the M6 and M11, where the training set is richer, the error at peak times is reduced by at least 50\% in all cases, reaching as much as 68.7\% in the case of the M6 morning rush.
 In the case of the M25, which is congested on a regular basis, the errors in the Published Profile during peak times are slightly lower than on the other cases, indicating that, given the methods used to calculate the Published Profile, this recurrent congestion is better captured by it, without the congestion being lighter in intensity than in the cases for the M6 and M11. 
 Even in this case, the proposed algorithm performs significantly better than any of the other two, except for a brief window between 6-7AM when it is outperformed by the Null Model.
@@ -366,15 +352,13 @@ Even in this case, the proposed algorithm performs significantly better than any
 HERE BE MULTIPLOT(3) HISTOGRAM WITH THE DISTRIBUTION OF ERRORS, ONLY SHOW SHAPE
 \section{Future Work}
 The algorithm supplied above meets all the requirements described in Section \ref{algorithm} except for the fact that it requires a heuristically set threshold. 
-One potential way of reaching total compliance with these requirements is to perform the decomposition between Background and Spikes by applying a Wavelet Transform. 
-In the transformed time series, it is possible to see which time scales are more affected by fluctuations and rare events while these are ongoing. 
+One potential way of reaching total compliance with these requirements is to perform the decomposition between Background and Spikes by applying a Wavelet Transform. In the transformed time series, it is possible to see which time scales are more affected by fluctuations and rare events while these are ongoing. 
 Then, the Wavelet and Scale coefficients for those combinations of time and scale can be set to mirror those where undisturbed background can be found and the difference between these newly adapted values and the original ones would conform the Spikes series.
 In the future a sensitivity analysis should be conducted to explore the limits of the algorithm in terms of minimum training data set, as well as maximum performance with increased training.
 \section*{Acknowledgment}
 
 We would like to thank Ayman Boustati, Laura Guzman Rincon and Guillem Mosquera Donate for their valuable insight and collaboration in the setup of the data streaming systems and in the initial exploratory analysis of the data. 
-We would also like to thank Steve Hilditch for his insight into the industry and general support. 
-A. C. E. thanks Stephan Grosskinsky for the initial guidance, discussions and support.
+We would also like to thank Steve Hilditch for his insight into the industry and general support. A. C. E. thanks Stephan Grosskinsky for the initial guidance and support.
 
 
 \begin{thebibliography}{00}
